# color-detection-autoclicker

./: .gitignore  CMakeLists.txt  game.py  main.cpp  video_combine.py
autoclicker/: CMakeLists.txt  autoclicker.sln  autoclicker.vcxproj  main.cpp
simulator/: color_convert.py  config.json  simulator.py  test_autoclicker.py
